<resources>
    <string name="app_name">Pitomnik application</string>
    <string name="login_activity_main_label">
       El.Ectrico <br />
        company
    </string>
    <string name="login_activity_login_button">LogIn</string>
    <string name="login_activity_signup_button">SignUp</string>
    <string name="hint_phone">phone</string>
    <string name="hint_password">password</string>
    <string name="hint_name">name</string>
    <string name="hint_surname">surname</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_password_validation">repeat password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>