<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/cardview_light_background"
    android:focusable="auto"
    tools:context=".ActivityLogInMenu">

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:clickable="true"
        android:text="@string/login_activity_signup_button"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogIn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonLogIn"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextLogInPassword"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextLogInPhone"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextLogInPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogInPhone" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/button_background"
        android:backgroundTint="@color/button_background_tint"
        android:text="@string/login_activity_login_button"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/editTextLogInPassword"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/editTextLogInPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogInPassword" />

    <EditText
        android:id="@+id/editTextLogInPhone"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="190dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/textViewMainLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewMainLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainLabel" />

    <TextView
        android:id="@+id/textViewMainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:text="@string/login_activity_main_label"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>